# luma

./: PROJECT_SUMMARY.md  README.md  dashboard.html  finalize_icons_v5.py  focus.html  focus.html.backup  package-lock.json  package.json  vite.config.js  whole_directory.txt
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
